src/test/deca/syntax/invalid/test_print_syntax_error.deca
// Description:
//    Programme testant la syntaxe d'un print
//
// Resultats:
//    	ligne 10 : Erreur de syntaxe : point virgule non attendue
// 		test_lex ne doit pas donner d'erreur		
// Historique:
//    cree le 07/01/2021
{
	println("kdfl" , ;  );
}